Bug 1728339 - Find the mount point BSD name correctly even under App Translocation, by calling statfs a second time. r=spohl, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D124126